// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer should render correctly 1`] = `
<div
  class="wmstool-transfer"
>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox wmstool-checkbox-checked"
        >
          <input
            checked=""
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          1/2 items
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      >
        <li
          class="wmstool-transfer-list-content-item"
        >
          <label
            class="wmstool-checkbox-wrapper"
          >
            <span
              class="wmstool-checkbox wmstool-checkbox-checked"
            >
              <input
                checked=""
                class="wmstool-checkbox-input"
                type="checkbox"
              />
              <span
                class="wmstool-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
        <li
          class="wmstool-transfer-list-content-item wmstool-transfer-list-content-item-disabled"
        >
          <label
            class="wmstool-checkbox-wrapper"
          >
            <span
              class="wmstool-checkbox wmstool-checkbox-disabled"
            >
              <input
                class="wmstool-checkbox-input"
                disabled=""
                type="checkbox"
              />
              <span
                class="wmstool-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
      </ul>
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
  <div
    class="wmstool-transfer-operation"
  >
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-right"
      />
    </button>
  </div>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          1 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      >
        <li
          class="wmstool-transfer-list-content-item"
        >
          <label
            class="wmstool-checkbox-wrapper"
          >
            <span
              class="wmstool-checkbox"
            >
              <input
                class="wmstool-checkbox-input"
                type="checkbox"
              />
              <span
                class="wmstool-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
      </ul>
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetkey 1`] = `
<div
  class="wmstool-transfer"
>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          1 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      >
        <li
          class="wmstool-transfer-list-content-item"
          title="a"
        >
          <label
            class="wmstool-checkbox-wrapper"
          >
            <span
              class="wmstool-checkbox"
            >
              <input
                class="wmstool-checkbox-input"
                type="checkbox"
              />
              <span
                class="wmstool-checkbox-inner"
              />
            </span>
          </label>
          <span>
            a
          </span>
        </li>
      </ul>
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
  <div
    class="wmstool-transfer-operation"
  >
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-right"
      />
    </button>
  </div>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          2 items
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      >
        <li
          class="wmstool-transfer-list-content-item"
          title="c"
        >
          <label
            class="wmstool-checkbox-wrapper"
          >
            <span
              class="wmstool-checkbox"
            >
              <input
                class="wmstool-checkbox-input"
                type="checkbox"
              />
              <span
                class="wmstool-checkbox-inner"
              />
            </span>
          </label>
          <span>
            c
          </span>
        </li>
        <li
          class="wmstool-transfer-list-content-item"
          title="b"
        >
          <label
            class="wmstool-checkbox-wrapper"
          >
            <span
              class="wmstool-checkbox"
            >
              <input
                class="wmstool-checkbox-input"
                type="checkbox"
              />
              <span
                class="wmstool-checkbox-inner"
              />
            </span>
          </label>
          <span>
            b
          </span>
        </li>
      </ul>
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
</div>
`;
